Fix whitespace

--- a/src/main/resources/view/Extensions.css
+++ b/src/main/resources/view/Extensions.css
@@ -18,8 +18,3 @@
 .tooltip-text {
     -fx-text-fill: white;
 }
-
-.split-pane > .split-pane-divider {
-    -fx-background-color: #ffffff;
-    -fx-padding: 3px;
-}
